adde NL to sparql

--- a/scripts/demos/.env.example
+++ b/scripts/demos/.env.example
@@ -10,3 +10,10 @@
 # These files are large (~15GB each) and should be stored outside the repository.
 # Download via: archs4py.download.counts("human", path=ARCHS4_DATA_DIR)
 ARCHS4_DATA_DIR=/Users/bgood/scripps/data/archs4
+
+# Anthropic API Key (for NL-to-SPARQL query generation)
+# Get your key from: https://console.anthropic.com/
+ANTHROPIC_API_KEY=your-api-key-here
+
+# OpenAI API Key (alternative to Anthropic)
+# OPENAI_API_KEY=your-openai-key-here
