--- a/web/configs/demo.yaml
+++ b/web/configs/demo.yaml
@@ -11,6 +11,12 @@ sources:
         label: "FRINK (production)"
         sparql_url: "https://example.org/frink/sparql"
 
+  wikidata:
+    endpoints:
+      - id: wikidata-frink
+        label: "Wikidata via FRINK"
+        sparql_url: "https://frink.apps.renci.org/wikidata/sparql"
+
   gene_expression:
     default_mode: "sparql"
     sparql:
