--- a/web/configs/demo.yaml
+++ b/web/configs/demo.yaml
@@ -17,13 +17,25 @@ sources:
         label: "Wikidata via FRINK"
         sparql_url: "https://frink.apps.renci.org/wikidata/sparql"
 
+  spoke:
+    endpoints:
+      - id: spoke-okn-frink
+        label: "SPOKE-OKN via FRINK"
+        sparql_url: "https://frink.apps.renci.org/spoke-okn/sparql"
+
+  ubergraph:
+    endpoints:
+      - id: ubergraph-frink
+        label: "Ubergraph via FRINK"
+        sparql_url: "https://frink.apps.renci.org/ubergraph/sparql"
+
   gene_expression:
     default_mode: "sparql"
     sparql:
       endpoints:
         - id: geneexpr-production
           label: "Gene expression (production)"
-          sparql_url: "https://example.org/geneexpr/sparql"
+          sparql_url: "https://frink.apps.renci.org/gene-expression-atlas-okn/sparql"
     web_mcp: {}
     local: {}
 
