updates for graph diagram and graph context, better app restart

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "click>=8.1,<9",
     "requests>=2.31,<3",
     "rdflib>=7.0,<8",
+    "PyYAML>=6.0.1",
 ]
 
 [project.scripts]
