--- a/.gitignore
+++ b/.gitignore
@@ -174,3 +174,7 @@ build/
 dist/
 
 
+.claude/settings.local.json
+scripts/.claude/settings.local.json
+scripts/demos/.claude/settings.local.json
+.claude/settings.local.json
