--- a/.gitignore
+++ b/.gitignore
@@ -178,3 +178,4 @@ dist/
 scripts/.claude/settings.local.json
 scripts/demos/.claude/settings.local.json
 .claude/settings.local.json
+.claude/settings.local.json
