--- a/web-v2/context/packs/wobd.yaml
+++ b/web-v2/context/packs/wobd.yaml
@@ -9,6 +9,8 @@ endpoint_mode:
   direct_endpoints:
     nde: "https://frink.apps.renci.org/nde/sparql"
     gene-expression-atlas-okn: "https://frink.apps.renci.org/gene-expression-atlas-okn/sparql"
+    spoke-okn: "https://frink.apps.renci.org/spoke-okn/sparql"
+    ubergraph: "https://frink.apps.renci.org/ubergraph/sparql"
 
 graphs:
   default_shortnames: ["nde", "ubergraph"]
@@ -25,7 +27,7 @@ prefixes:
 # - timeout_seconds: default request timeout (25s); GXA direct uses 120s.
 # - max_rows_download: cap on rows when downloading results (2000).
 # - forbid_ops: SPARQL operations rejected by validator (no write ops).
-# GEO is not a graph in FRINK; NDE results with GSE IDs get links only.
+# GEO data is in the NDE graph (same schema.org as ImmPort etc.); use geo_dataset_search to search GEO only.
 guardrails:
   max_limit: 500
   timeout_seconds: 25
@@ -38,9 +40,16 @@ guardrails:
   forbid_ops: ["INSERT", "DELETE", "LOAD", "CLEAR", "DROP", "CREATE", "MOVE", "COPY", "ADD"]
 
 templates:
+  - id: drug_datasets
+    description: "Find NDE datasets for diseases treated by a drug. Optionally restrict to GEO/gene expression and include GXA/SPOKE-GeneLab links for matching experiments."
+    required_slots: ["drug"]
+    optional_slots: ["only_gene_expression", "max_results"]
   - id: dataset_search
     description: "Find datasets by keywords/healthCondition"
     required_slots: ["keywords"]  # At least one keyword required for the simple search form
+  - id: geo_dataset_search
+    description: "Find NCBI GEO datasets in NDE by keywords, disease, or organism"
+    required_slots: ["keywords"]
   - id: entity_lookup
     description: "Resolve CURIE/URI/label to entity"
     required_slots: ["q"]
