fix query, expose more params in ui template

--- a/web-v2/context/packs/wobd.yaml
+++ b/web-v2/context/packs/wobd.yaml
@@ -72,7 +72,7 @@ templates:
   - id: gene_expression_genes_agreement
     description: "Find genes DE in the same direction across multiple experiments"
     required_slots: []
-    optional_slots: ["organism_taxon_ids", "tissue_uberon_ids_ols", "factor_terms"]
+    optional_slots: ["min_experiments", "direction", "limit", "organism_taxon_ids", "tissue_uberon_ids_ols", "factor_terms"]
   - id: gene_expression_genes_discordance
     description: "Find genes DE in opposite directions across contrasts"
     required_slots: []
