--- a/.gitignore
+++ b/.gitignore
@@ -179,3 +179,4 @@ scripts/.claude/settings.local.json
 scripts/demos/.claude/settings.local.json
 .claude/settings.local.json
 .claude/settings.local.json
+.claude/settings.local.json
